# LitLMC

./: CMakeLists.txt  README.md  build.sh
data/: sample.txt
include/: inference.h  neural_network.h  text_processor.h  tokenizer.h  trainer.h
src/: inference.cpp  main.cpp  neural_network.cpp  text_processor.cpp  tokenizer.cpp  trainer.cpp
